# skall

./: .gitignore  BUGS  COPYING  INSTALL  Makefile  Makefile.am  README.md  TODO  args.c  autogen.sh  buffer.c  builtins.c  configure.ac  hashtable.c  prompt.c  readline.c  skall.c  trim.c  variables.c
include/: args.h  buffer.h  builtins.h  hash.h  hashtable.h  prompt.h  readline.h  skall.h  strdup.h  trim.h  variables.h
src/: Makefile.am  args.c  hash.c  hashtable.c  prompt.c  readline.c  skall.c  strdup.c  variables.c
